Sugati/src/objects/Payment_Method__c.object
<CustomObject>
    <fields>
        <fullName>PM_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PM_Record_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Record Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Record_Type__c.RT_SObject_Type__c</field>
                <operation>equals</operation>
                <value>Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Record_Type__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Use_In_OBF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use In OBF</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PM_Record_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <recordTypes>
        <fullName>Cheques_Notes</fullName>
        <active>true</active>
        <label>Cheques Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Footer</fullName>
        <active>true</active>
        <label>Footer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Important_Notes</fullName>
        <active>true</active>
        <label>Important Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment_Method</fullName>
        <active>true</active>
        <label>Payment Method</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>